--- a/blog.html
+++ b/blog.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html ng-app="Vita3K">
 
 <head>
@@ -244,14 +244,15 @@
     <div ng-repeat="report in reports">
         <section class="blog-body" ng-class="'bg-dark text-white'" id="{{report.id}}">
             <div class="container" id="blog-container">
-                <div class="row blog-post">
+			  {% for post in site.posts %}
+              <div class="row blog-post">
                     <div class="col-lg-12 mx-auto text-center">
-                        <h2 class="blog-post-title section-heading"><font color="#bbbbbb">{{report.title}}</font></h2>
-                        <p class="blog-post-body mb-5" align="left" ng-bind-html="report.report | unsafe">
-                        </p>
-                        <div class="blog-post-author" align="right"><small><i>by {{report.author}}</i></small></div>
+                        <h2 class="blog-post-title section-heading"><a href="{{ site.baseurl }}{{ post.url }}"><font color="#bbbbbb">{{ post.title }}</font></a></h2>
+                        <p class="blog-post-body mb-5" align="left">{{ post.excerpt }}</p>
+                        <div class="blog-post-author" align="right"><a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More</a></div>
                     </div>
                 </div>
+           {% endfor %}
             </div>
         </section>
     </div>
